r1 (0.1):
	* Primera versión del instalador
r2:
	* Añadido el programa SevenuP