@@ -1,4 +1,4 @@
-Churrera Installer
+Churrera Installer y Retriever
 ======================
 
 ###(c) 2013 Alfonso Saavedra "Son Link"
@@ -6,11 +6,12 @@ Churrera Installer
 
 Script bajo licencia GPLv3. Ver COPYING para mas información.
 
+###Churrera Installer###
 Instalador para las herramientas necesarias para la Churrera de los Mojon Twins.
+
+###Churrera Retriever###
+Crea o actualiza un proyecto de la churrera
 
 La Churrera te permita hacer de manera mas fácil juegos para los micro ordenadores Zx Spectrum, sin necesidad de saber BASIC o código maquina.
 
 Puedes encontrar un tutorial de como usar la churrera en http://www.elmundodelspectrum.com/taller.php
-
-Esta es una versión temprana del programa que instala el compilador z88dk y las utilidades bas2tap, bin2tap y SevenuP
-En un futuro se irán añadiendo el resto de herramientas. Para algunas de ellas de momento sera necesario usar Wine salvo que se encuentre su código fuente o un programa similar.
