@@ -1,3 +1,2 @@
 Buscar el código fuente de las otras utilidades o en su caso buscar alternativas en GNU/Linux.
 Añadir al script la opción de desinstalar las herramientas.
-Incluir un script para la descarga y puesta a punto de la ultima versión de la churrera
